# SCMIR

./: .gitignore  README.txt
SCMIRExtensions/Classes/: SCMIRAudioFile.sc  SCMIRScore.sc
Source/: CMakeLists.txt
